Upgrade to Java 21
Lint accordingly